samples/_failures_safe/1761618407_f4b5fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e70c3c2.c: In function ‘main’:
./samples/SAFE/__tmp_8e70c3c2.c:155:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  155 |     int operation
      |     ^~~
./samples/SAFE/__tmp_8e70c3c2.c:155:5: error: expected declaration or statement at end of input
